# OpenCL-in-Action

./: CMakeLists.txt
AppB/glut_intro/: glut_intro.c
AppB/texture_squares/: texture_squares.c
AppB/three_squares/: three_squares.c
Ch01/matvec/: aux.c  aux.h  matvec.c
Ch02/contextCount/: CMakeLists.txt  aux.h  contextCount.c
Ch02/deviceExtTest/: CMakeLists.txt  device_ext_test.c
Ch02/kernelSearch/: CMakeLists.txt  aux.h  kernelSearch.c
Ch02/platformExtTest/: README.md  device.c  device.h  deviceJson.c  deviceJson.h  jsonPlatform.c  lscl.c  platform.c  platform.h
Ch02/platformExtTest.bak/: CMakeLists.txt  deviceCL.h  jsonDevice.c  jsonDevice.h  jsonPlatform.h  platformCL.c
Ch02/programBuild/: CMakeLists.txt  program_build.c
Ch02/queueKernel/: CMakeLists.txt  queue_kernel.c
Ch02/queue_kernel/: blank.cl
Ch03/bufferCheck/: CMakeLists.txt  buffer_check.c
Ch03/bufferTest/: CMakeLists.txt  buffer_test.c
Ch03/buffer_check/: buffer_check.c
Ch03/buffer_test/: blank.cl  buffer_test.c
Ch03/mapCopy/: CMakeLists.txt  map_copy.c
Ch03/map_copy/: map_copy.c
Ch04/double_test/: CMakeLists.txt  double_test.c
Ch04/float_config/: CMakeLists.txt  float_config.c
Ch04/hello_kernel/: CMakeLists.txt  hello_kernel.c
Ch04/vector_bytes/: CMakeLists.txt  vector_bytes.c  vector_bytes.cl
Ch04/vector_widths/: CMakeLists.txt  vector_widths.c
Ch05/id_check/: CMakeLists.txt  id_check.c  id_check.cl
Ch05/mad_test/: CMakeLists.txt  mad_test.c  mad_test.cl
Ch05/mod_round/: CMakeLists.txt  mod_round.c  mod_round.cl
Ch05/op_test/: CMakeLists.txt  op_test.c  op_test.cl
Ch05/polar_rect/: CMakeLists.txt  polar_rect.c  polar_rect.cl
Ch05/select_test/: CMakeLists.txt  select_test.c  select_test.cl
Ch05/shuffle_test/: CMakeLists.txt  shuffle_test.c  shuffle_test.cl
Ch06/interp/: CMakeLists.txt  interp.c  interp.cl
Ch06/simple_image/: CMakeLists.txt  simple_image.c  simple_image.cl
Ch07/atomic/: CMakeLists.txt  atomic.c  atomic.cl
Ch07/callback/: CMakeLists.txt  callback.c  callback.cl
Ch07/profile_items/: CMakeLists.txt  profile_items.c  profile_items.cl
Ch07/profile_read/: CMakeLists.txt  profile_read.c  profile_read.cl
Ch07/user_event/: CMakeLists.txt  user_event.c  user_event.cl
Ch08/callback/: blank.cl
Ch08/full_context/: full_context.cpp
Ch08/map_copy/: blank.cl
Ch08/profile/: blank.cl
Ch08/sub_buffer/: sub_buffer.cl
Ch09/JavaCL/: root.cl
Ch09/PyOpenCL/create_kernel/: arith.cl
Ch09/PyOpenCL/run_kernel/: mult.cl
Ch10/reduction/: CMakeLists.txt  reduction.c  reduction.cl
Ch10/reduction_complete/: CMakeLists.txt  reduction_complete.c  reduction_complete.cl
Ch10/reduction_scalar/: CMakeLists.txt  reduction.c  reduction.cl
Ch10/wg_test/: CMakeLists.txt  wg_test.c
Ch11/bsort/: CMakeLists.txt  bsort.c  bsort.cl
Ch11/bsort8/: CMakeLists.txt  bsort8.c  bsort8.cl
Ch11/radix_sort8/: CMakeLists.txt  radix_sort8.c  radix_sort8.cl
Ch11/string_search/: CMakeLists.txt  string_search.c  string_search.cl
Ch12/matrix_mult/: CMakeLists.txt  matrix_mult.c  matrix_mult.cl
Ch12/qr/: CMakeLists.txt  qr.c  qr.cl
Ch12/transpose/: CMakeLists.txt  transpose.c  transpose.cl
Ch12/vec_reflect/: CMakeLists.txt  vec_reflect.c  vec_reflect.cl
Ch13/conj_grad/: CMakeLists.txt  conj_grad.c  conj_grad.cl  mmio.h
Ch13/read_mm/: CMakeLists.txt  mmio.c  mmio.h  read_mm.c
Ch13/steep_desc/: CMakeLists.txt  steep_desc.c  steep_desc.cl
Ch14/fft/: CMakeLists.txt  fft.c  fft.cl
Ch14/rdft/: CMakeLists.txt  fft_check.c  rdft.c  rdft.cl
Ch15/basic_interop/: CMakeLists.txt  basic_interop.c  basic_interop.cl  basic_interop.frag  basic_interop.vert
Ch15/glfwBasicInterop/: CMakeLists.txt  glad.h  glfwBasicInterop.c
Ch15/glfwInterop/: CMakeLists.txt  glad.c  glfwTst.c
Ch15/glfwTst/: CMakeLists.txt  glfwTst.c
Ch15/sphere/: CMakeLists.txt  sphere.c  sphere.cl
Ch16/texture_filter/: texture_filter.c  texture_filter.cl
